Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22834

disks.disks fails on buildbot.mariadb.org

    XMLWordPrintable

Details

    Description

      disks.disks                              w8 [ fail ]
              Test ended at 2020-06-08 10:50:22
      CURRENT_TEST: disks.disks
      --- /buildbot/ubuntu-2004/build/plugin/disks/mysql-test/disks/disks.result	2020-06-08 10:03:21.000000000 +0000
      +++ /buildbot/ubuntu-2004/build/plugin/disks/mysql-test/disks/disks.reject	2020-06-08 10:50:22.263144830 +0000
      @@ -9,4 +9,4 @@
       ) ENGINE=MEMORY DEFAULT CHARSET=utf8
       select sum(Total) > sum(Available), sum(Total)>sum(Used) from information_schema.disks;
       sum(Total) > sum(Available)	sum(Total)>sum(Used)
      -1	1
      +0	1
      mysqltest: Result content mismatch
       - saving '/buildbot/ubuntu-2004/build/mysql-test/var/8/log/disks.disks/' to '/buildbot/ubuntu-2004/build/mysql-test/var/log/disks.disks/'
      

      Attachments

        Issue Links

          Activity

            People

              cvicentiu Vicențiu Ciorbaru
              cvicentiu Vicențiu Ciorbaru
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.